--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <img class="button-image" id="item0" src="./assets/models/coffee-table/thumbnail.png"/>
     <img class="button-image" id="item1" src="./assets/models/chair/thumbnail.png"/>
     <img class="button-image" id="item2" src="./assets/models/cushion/thumbnail.png"/>
+     <img class="button-image" id="item3" src="./assets/models/rug/thumbnail.png"/>
   </div>
   <div id="confirm-buttons">
     <button class="button" id="place">OK</button>
