--- a/index.html
+++ b/index.html
@@ -72,34 +72,29 @@
   </style>
 </head>
 <body>
-  <div id="item-buttons">
-    <img class="button-image" id="item0" src="./assets/models/coffee-table/thumbnail.png"/>
-    <img class="button-image" id="item1" src="./assets/models/chair/thumbnail.png"/>
-    <img class="button-image" id="item2" src="./assets/models/cushion/thumbnail.png"/>
-     <img class="button-image" id="item3" src="./assets/models/rug/thumbnail.png"/>
-  </div>
-  <div id="confirm-buttons">
-    <button class="button" id="place">OK</button>
-    <button class="button" id="cancel">X</button>
-  </div>
-  <div id="mySidenav" class="sidenav">
+  <div id="item-buttons" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="#">Coffee table</a>
   <a href="#">Sofa</a>
   <a href="#">Chair</a>
   <a href="#">Rug</a>
 </div>
+  <div id="confirm-buttons">
+    <button class="button" id="place">OK</button>
+    <button class="button" id="cancel">X</button>
+  </div>
+ <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 
 
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+
 
 <script>
 function openNav() {
-  document.getElementById("mySidenav").style.width = "250px";
+  document.getElementById("item-buttons").style.width = "250px";
 }
 
 function closeNav() {
-  document.getElementById("mySidenav").style.width = "0";
+  document.getElementById("item-buttons").style.width = "0";
 }
 </script>
 </body>
