--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   font-family: "Lato", sans-serif;
 }
 
-.sidenav {
+.item-buttons {
   height: 100%;
   width: 0;
   position: fixed;
@@ -43,7 +43,7 @@
   padding-top: 60px;
 }
 
-.sidenav a {
+.item-buttons a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
@@ -52,11 +52,11 @@
   transition: 0.3s;
 }
 
-.sidenav a:hover {
+.item-buttons a:hover {
   color: #f1f1f1;
 }
 
-.sidenav .closebtn {
+.item-buttons .closebtn {
   position: absolute;
   top: 0;
   right: 25px;
@@ -65,8 +65,8 @@
 }
 
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+  .item-buttons {padding-top: 15px;}
+  .item-buttons a {font-size: 18px;}
 }
     
   </style>
